Wed Aug 10 09:39:41 2005  William Otte  <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Basic_Deployment_Data.cpp
	* DAnCE/Config_Handlers/Basic_Deployment_Data.hpp
	* DAnCE/Config_Handlers/CIAOServerResources.cpp
	* DAnCE/Config_Handlers/CIAOServerResources.hpp
	* DAnCE/Config_Handlers/Deployment.cpp
	* DAnCE/Config_Handlers/Deployment.hpp
	* DAnCE/Config_Handlers/ccd.cpp
	* DAnCE/Config_Handlers/ccd.hpp
	* DAnCE/Config_Handlers/cdd.cpp
	* DAnCE/Config_Handlers/cdd.hpp
	* DAnCE/Config_Handlers/cdp.cpp
	* DAnCE/Config_Handlers/cdp.hpp
	* DAnCE/Config_Handlers/cid.cpp
	* DAnCE/Config_Handlers/cid.hpp
	* DAnCE/Config_Handlers/cpd.cpp
	* DAnCE/Config_Handlers/cpd.hpp
	* DAnCE/Config_Handlers/iad.cpp
	* DAnCE/Config_Handlers/iad.hpp
	* DAnCE/Config_Handlers/pcd.cpp
	* DAnCE/Config_Handlers/pcd.hpp
	* DAnCE/Config_Handlers/toplevel.cpp
	* DAnCE/Config_Handlers/toplevel.hpp

	Regenerated with the latest CVS-head version of XSC. These support
	a couple improvements that will aid in optimizing the config
	handlers. 
	
Tue Aug  9 11:55:13 2005  Ming Xiong <mxiong@dre.vanderbilt.edu>

        * docs/imgs/component-basic.png
        * docs/imgs/CCM.vsd

        Updated CCM diagram to fix a interface naming error.


Tue Aug  9 10:02:13 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * DAnCE/ComponentPackager/README.html: Improved the
          documentation to point to the right directory for the Quoter
          example.  Thanks to Aldo Texier <aldo.texier@oktal.fr> for
          reporting this.

Tue Aug  9 13:11:04 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/RepositoryManager/RepositoryManager.mpc:

          Updated dependencies to reflect the recent name change from
          NodeDaemon_stub to NodeManager_stub.

        * DAnCE/RepositoryManager/Repository_Manager.cpp:

          Updated identifier names to match the change from NodeDaemon
          to ModeManager.

Mon  Aug 08 22:02:43 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
